Changes: Information about configure options is needed in application build RevBy:Sergiy Details: In case of QtDbus we need to know if we enabled it or not when we build libmeegotouch          In meegotouch_common.prf when we are linking some application with libmeegotouch DEFINES from application are already configured different way than DEFINES from library build. 	 This is just one way. I think there could be some nicer way but at least we have the libmeegotouch "configuration" stored for later use/check.

--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -11,6 +11,10 @@ M_VERSION=$${M_MAJOR_VERSION}.$${M_MINOR_VERSION}.$${M_PATCH_VERSION}
 
 # first set default value for meegotouch prefix
 # the @@...@@ variable is filled from the libmeegotouch/configure script.
+
+#info how the libmeegotouch was configured
+MEEGOTOUCHCONFIG_DEPS = @@MEEGOTOUCHCONFIG_DEPS@@
+
 unix {
     M_PREFIX = @@M_UNIX_INSTALL_PREFIX@@
     M_SYSCONFDIR = @@M_UNIX_INSTALL_SYSCONFDIR@@
