--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -108,7 +108,7 @@ win32 {
     M_INSTALL_SYSCONF = $$M_PREFIX/etc
     M_INSTALL_XSESSION = $$M_INSTALL_SYSCONF/X11
     M_INSTALL_LOCALSTATE = $$M_PREFIX/var
-    M_CACHE_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch
+    M_CACHE_DIR = c:/windows/temp/meegotouch
 
     M_THEME_PRELOAD_DIR = $$M_INSTALL_LOCALSTATE/lib/meegotouch/theme/preload.d
     M_THEME_POST_PRELOAD_DIR = $$M_INSTALL_LOCALSTATE/lib/meegotouch/theme/preload.post
