Changes: Fix meegotouch cache directory location for mac.
RevBy: Sergiy Dubovik

Details: Use /Library/Caches for properly placing meegotouch cache.

--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -92,13 +92,13 @@ mac {
     M_DBUS_SERVICES_DIR = $$M_INSTALL_DATA/dbus-1/services
 
     M_SHADER_SOURCE_DIR = $$M_INSTALL_DATA/meegotouch/shaders
-    M_SHADER_BINARY_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch/shaders
 
     M_TARGETS_CONF_DIR = $$M_INSTALL_DATA/meegotouch/targets
 
     M_IM_TOOLBARS_DIR = $$M_INSTALL_DATA/meegotouch/imtoolbars
 
-    M_CACHE_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch
+    M_CACHE_DIR = /Library/Caches/meegotouch
+    M_SHADER_BINARY_DIR = $$M_CACHE_DIR/shaders
 }
 
 win32 {
