Changes: make chaining examples work with booster
RevBy: Mike Fabian

--- a/examples/chaining/chainingexampleapp2/chainingexampleapp2.desktop
+++ b/examples/chaining/chainingexampleapp2/chainingexampleapp2.desktop
@@ -2,6 +2,6 @@
 Type=Application
 Name=2-Chaining Example App
 Icon=icon-l-video
-X-Maemo-Service=com.nokia.ChainingExampleApp2
-Exec=chainginexampleapp2
+X-Maemo-Service=com.nokia.chainingexampleapp2
+Exec=/usr/bin/invoker --type=m /usr/bin/chainingexampleapp2
 OnlyShowIn=X-MeeGo;
