--- a/examples/chaining/chainingexampleapp1/com.nokia.chainingexampleapp1.service
+++ b/examples/chaining/chainingexampleapp1/com.nokia.chainingexampleapp1.service
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=com.nokia.chainingexampleapp1
-Exec=/usr/bin/chainingexampleapp1
+Exec=/usr/bin/invoker --type=m /usr/bin/chainingexampleapp1
