Revert "Changes: make chaining examples work with booster"
This reverts commit 85164ee7974470c702d4bfd28f2bb6599456977b.

--- a/examples/chaining/chainingexampleapp1/chainingexampleapp1.desktop
+++ b/examples/chaining/chainingexampleapp1/chainingexampleapp1.desktop
@@ -3,5 +3,5 @@ Type=Application
 Name=1-Chaining Example App
 Icon=icon-l-video
 X-Maemo-Service=com.nokia.chainingexampleapp1
-Exec=/usr/bin/invoker --type=m /usr/bin/chainingexampleapp1
+Exec=chainingexampleapp1
 OnlyShowIn=X-MeeGo;
