Changes: convert pixmaps to machine format at compile time
RevBy: Holger Schröder

Details: patch by Kuisma Salonen

currently triggered at compile time, as deb package

Changes: imgcachegen doesn't use ImageResource class

Details: ImageResource::saveToFsCache is now public and static - this
  introduces few dirty things such as cackeKey/absoluteFilePath confusion
  (two different variables which are basically the same - and this state
  needs to be maintained).

Changes: ImageResource::saveToFsCache takes orig path as const string ref

Details: the param has been changed from QString to const QString &

Changes: convertPixmaps supports prefixing cache directory

Details: Basically had add new function to MSystemDirectories to allow
  this. The feature is useful if wanting to run convertPixmaps tool during
  a build of a package.

    More or less experimental thing that doesn't necessarily have good
  quality nor any sense.

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -50,3 +50,5 @@ meegotouch-qt-style
 meegotouch-qt-style-dbg
 meegotouch-examples
 meegotouch-examples-dbg
+meegotouch-cache-utils
+meegotouch-cache-utils-dbg
