--- a/doc/mdoxy.cfg.in
+++ b/doc/mdoxy.cfg.in
@@ -44,7 +44,7 @@ WARN_LOGFILE          = "doxygen.log"
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 
-FILE_VERSION_FILTER   = "sh @M_SRC_DIR@/versionString.sh @M_SRC_DIR@/.."
+FILE_VERSION_FILTER   = "echo @M_DOC_VERSION_STRING@"
 INPUT                 = @M_SRC_DIR@/../src/ \
                         @M_SRC_DIR@/src/ \
                         @M_SRC_DIR@/../examples
