Changes: do not depend on libgl-dev for arm
RevBy: Armin Berres

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 5),
  libgstreamer-plugins-base0.10-dev,
  libgles2-sgx-img-dev [arm armel],
  opengles-sgx-img-common-dev [arm armel],
- libgl-dev | libgl1-mesa-dev [i386],
+ libgl-dev [i386] | libgl1-mesa-dev [i386],
  libqt4-opengl-dev,
  pkg-config (>= 0.22),
  libxdamage-dev,
