--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,8 @@ Build-Depends: debhelper (>= 5),
  libxcomposite-dev,
  libx11-xcb-dev,
  libxcb1-dev,
- libxcb-composite0-dev
+ libxcb-composite0-dev,
+ libngf-dev
 Standards-Version: 3.7.2
 
 Package: libmeegotouchcore0
