New: font preloading support
RevBy: Stanislav Ionascu

Details:
The invoker is suppposed to initialize as many things as possible
which are shared between several applications. To avoid cluttering
the invoker code with this logic a new library "meegotouchpreloader"
is added. this library is dlopened by the invoker and does the needed
initializations for meego touch applications.
In the first step the library fills the internal font cache of Qt to
get rid of delays when a speficic font is requested for the first
time.
Later on this library is also supposed to precreate MStyle objects.

--- a/debian/control
+++ b/debian/control
@@ -105,6 +105,23 @@ Depends: libmeegotouchviews0 (= ${Source-Version})
 Description: libmeegotouch debug package
  libmeegotouch debug symbols.
 
+Package: libmeegotouchpreloader0
+Section: libs
+Architecture: any
+Depends: ${misc:Depends},
+ ${launcher:Depends},
+ ${shlibs:Depends},
+ libmeegotouchcore0 (= ${Source-Version})
+Description: MeeGo Touch preloader library
+ MeeGo Touch preloader framework library
+
+Package: libmeegotouchpreloader0-dbg
+Section: devel
+Architecture: any
+Depends: libmeegotouchpreloader0 (= ${Source-Version})
+Description: libmeegotouch debug package
+ libmeegotouch debug symbols.
+
 Package: libmeegotouch-bin
 Section: utils
 Architecture: any
