Changes: add debian gitignores for preloader package
RevBy: TrustMe

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -13,6 +13,8 @@ libmeegotouchsettings0-dbg
 libmeegotouchsettings0
 libmeegotouchviews0-dbg
 libmeegotouchviews0
+libmeegotouchpreloader0-dbg
+libmeegotouchpreloader0
 libmeegotouch-doc
 libmeegotouch-l10n-ar
 libmeegotouch-l10n-de
