Changes: fix dependencies of libmeegotouch-tests debian package
RevBy: Miroslav Safr

Details:

The tests package does not need to depend on the “locales”
source package anymore and create the en_US.UTF-8 locale
in its post install because the en_US.UTF-8 locale is now
already available in the binary “posix-locales” package and
it is therefore enough to require this.

--- a/debian/control
+++ b/debian/control
@@ -297,7 +297,7 @@ Package: libmeegotouch-tests
 Section: devel
 Architecture: any
 Depends: ${shlibs:Depends},
- locales,
+ posix-locales,
  gstreamer0.10-plugins-base,
  gstreamer0.10-plugins-good
 Description: libmeegotouch unit tests
